Bug 209069 [prov] p2 tests should clean up after themselves.